--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,18 @@
 [metadata]
-description=
-long_description=
-url=
-author=
-author_email=
-maintainer=
-maintainer_email=
-license=
+name = argparseware
+version = 1.0.0
+
+description =
+long_description =
+url =
+author =
+author_email =
+maintainer =
+maintainer_email =
+license =
+
+packages = find:
+install_requires = file:requirements.txt
+
+[options.packages.find]
+exclude = tests,tests.*
