Update setup files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,12 @@
 [metadata]
 name = argparseware
-version = 1.0.0
+version = 0.9.6-2
+description = argparseware middleware library
+url = https://github.com/relevance-io/argparseware
 
-description =
-long_description =
-url =
-author =
-author_email =
-maintainer =
-maintainer_email =
-license =
-
-packages = find:
-install_requires = file:requirements.txt
-
-[options.packages.find]
-exclude = tests,tests.*
+author = Francis Lacroix
+author_email = f@relevance.io
+maintainer = Francis Lacroix
+maintainer_email = f@relevance.io
+license = MIT
+zip_safe = True
