--- a/.pylintrc
+++ b/.pylintrc
@@ -1,10 +1,13 @@
 [MASTER]
-ignore-patterns=tests/.*,distutils_cmd.py,setup.py
+ignore-patterns=tests/.*,setup.py
 
 [MESSAGES CONTROL]
 disable=,
     too-few-public-methods,
     too-many-instance-attributes,
+    too-many-statements,
+    too-many-branches,
+    too-many-locals,
     no-self-use,
     try-except-raise,
     broad-except,
