--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = argparseware
-version = 0.9.6-2
+version = 0.9.8
 description = argparseware middleware library
 url = https://github.com/relevance-io/argparseware
 
